test_regress/t/t_param_up_bad.out
%Error: t/t_param_up_bad.v:15: Can't find definition of scope/variable: bar
%Error: Exiting due to
